--- a/client/client.jade
+++ b/client/client.jade
@@ -1,5 +1,5 @@
 head
-    title dao
+    title phoenix culture
     meta(name='viewport', content='user-scalable=yes, initial-scale=1.0, maximum-scale=1.5, width=device-width')
     meta(name='apple-mobile-web-app-capable', content='yes')
     meta(name='apple-mobile-web-app-status-bar-style', content='black')
@@ -114,7 +114,7 @@ template(name='nav')
                     // i.sign.in.large.icon
                     +i name='internal'
                     span.mobile.hidden login
-    .ui.attached.small.menu.hscroll
+    .ui.attached.small.borderless.menu.hscroll
         a.icon.item.fly_right(href="/events" class="{{isActiveRoute 'events'}}" title='events')
             // i.large.calendar.icon
             small #{event_counter}
@@ -193,8 +193,8 @@ template(name='mlayout')
 
 template(name='home')
     .ui.center.aligned.four.column.padded.grid 
-        .column 
-            each home_docs
+        each home_docs
+            .column 
                 a.ui.card(href="/#{route}")
                     img.ui.image.zoomer(src="{{c.url image_id width=300 height=300 crop='fit'}}")    
                     .content
